clean-up migrated back to collect to list for lower v