@@ -31,6 +31,8 @@ import static com.android.launcher3.LauncherSettings.Favorites.ITEM_TYPE_APPWIDG
 import static com.android.launcher3.provider.LauncherDbUtils.dropTable;
 import static com.android.launcher3.widget.LauncherWidgetHolder.APPWIDGET_HOST_ID;
 
+import static java.util.stream.Collectors.toList;
+
 import android.app.backup.BackupManager;
 import android.appwidget.AppWidgetHost;
 import android.appwidget.AppWidgetManager;
@@ -178,7 +180,7 @@ public class RestoreDbTask {
         // phone
         return LauncherFiles.GRID_DB_FILES.stream()
                 .filter(dbName -> new File(dbName).exists())
-                .toList();
+                .collect(toList());
     }
 
     /**
