@@ -21,6 +21,7 @@ import static com.android.launcher3.widget.util.WidgetSizes.getWidgetSizePx;
 import static com.android.launcher3.widget.util.WidgetsTableUtils.WIDGETS_TABLE_ROW_SIZE_COMPARATOR;
 
 import static java.lang.Math.max;
+import static java.util.stream.Collectors.toList;
 
 import android.content.Context;
 import android.util.AttributeSet;
@@ -186,6 +187,6 @@ public final class WidgetsRecommendationTableLayout extends TableLayout {
         }
 
         // Perform re-ordering once we have filtered out recommendations that fit.
-        return filteredRows.stream().sorted(WIDGETS_TABLE_ROW_SIZE_COMPARATOR).toList();
+        return filteredRows.stream().sorted(WIDGETS_TABLE_ROW_SIZE_COMPARATOR).collect(toList());
     }
 }
